<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/gray"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textname" />

    <TextView
        android:id="@+id/textprice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/price"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editname" />

    <EditText
        android:id="@+id/editprice"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/gray"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textprice" />

    <TextView
        android:id="@+id/textstock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/stock"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editprice" />

    <EditText
        android:id="@+id/editstock"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/gray"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textstock" />

    <TextView
        android:id="@+id/textcategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/category"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editstock" />

    <EditText
        android:id="@+id/editcategory"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/gray"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textcategory" />

    <TextView
        android:id="@+id/textphoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/photo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editcategory" />

    <ImageView
        android:id="@+id/imagephoto"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:background="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textphoto"
        app:srcCompat="@drawable/baseline_add_photo_alternate_24" />

    <Button
        android:id="@+id/buttonselectimage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#3C71AF"
        android:text="@string/select_image"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imagephoto"
        app:layout_constraintTop_toBottomOf="@id/editcategory" />

    <Button
        android:id="@+id/buttoncreate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#3C71AF"
        android:text="@string/create"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/buttonselectimage" />


</androidx.constraintlayout.widget.ConstraintLayout>