<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@drawable/rounded_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_product"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/baseline_add_photo_alternate_24"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:textSize="16dp"
        android:text="@string/name_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textstock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/stock"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textstock"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="76dp"
        android:layout_marginStart="8dp"
        android:text="valor"/>



    <TextView
        android:id="@+id/textprice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/cairo_bold"
        android:textSize="16dp"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="230dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textprice"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="116dp"
        android:layout_marginStart="8dp"
        android:text="valor"/>

    <TextView
        android:id="@+id/textcategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/cairo_bold"
        android:textSize="16dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="230dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textcategory"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="156dp"
        android:layout_marginStart="8dp"
        android:text="valor"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:text="Delete"
        android:backgroundTint="#FF2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:text="Update"
        android:backgroundTint="#2962FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>